settings for API  keys

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,11 +84,16 @@
             </ul>
           </li>
 
-          <li>
-            <a class='' href='/keywords'>
-              <i class="icon-search icon-white"></i>
+          <li class="dropdown" id="menu4">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#search">
+              <i class="icon-user icon-white"></i>
               Keywords
+              <b class="caret"></b>
             </a>
+            <ul class="dropdown-menu">
+              <li><a href="/keywords">Suchmaschinen</a></li>
+              <li><a href="/twitter_keywords">Twitter Tracking</a></li>
+            </ul>
           </li>
 
           <li class="dropdown" id="competitors">
